[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = "Vending Machine API implementation for the MVP Match backend assignment."
authors = ["Erinç Argımak <erar93@gmail.com>"]
readme = "README.md"
packages = [{include = "vending_machine"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.12.0"
autoflake = "^2.0.1"
flake8 = "^6.0.0"
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
